# GABGFX

./: CMakeLists.txt  README.md
res/: level_1.txt
src/: engine.c  engine.h  gab_math.h  gabgfx.c  gabgfx.h  gabmath.h  main.c  rasterizer.cl  raytracer.cl  shapes.cl
src/rasterizer/: rasterizer.c  rasterizer.h
src/raycaster/: raycaster.c  raycaster.cl  raycaster.h
src/raytracer/: raytracer.c  raytracer.h
